--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   },
   "homepage": "https://github.com/LimKaiXin/C237_Team106#readme",
   "dependencies": {
-    "fastest-levenshtein": "^1.0.16"
+    "connect-flash": "^0.1.1",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "fastest-levenshtein": "^1.0.16",
+    "multer": "^2.0.2",
+    "mysql2": "^3.14.2"
   }
 }
