--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "fastest-levenshtein": "^1.0.16",
+    "init": "^0.1.2",
     "multer": "^2.0.2",
     "mysql2": "^3.14.2"
   }
